--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#000">
+    <meta name="theme-color" content="white"><!--last changed by sahil on 21oct '22-->
     <!--this will give the theme color to the window-->
     <title>Fashionista</title>
     <link rel="stylesheet" href="css/style.css">
@@ -68,6 +68,7 @@
         </div>
         
     </section>
+    <script>"use strict";console.log(1+11);</script>
 </body>
 
 </html>
